# utf_convert

./: .gitignore  CMakeLists.txt  LICENSE  README.md  README_en.md
include/: utf_convert.hpp
src/: utf_convert.cpp
test/: test_u16_to_u8.cpp  test_u8_to_u32.cpp
test/data/: utf16_1.txt  utf32_1.txt
